vbnc/vbnc/vbnc/tests/Errors/30179-2.vb
Namespace N
    Class A
    End Class
    Class a
    End Class
End Namespace
